@@ -14,6 +14,10 @@ UseIPv6=false
 MulticastGroupAddress=
 UseHive=true
 UseHostnameForDefaultUsername=false
+HideMainToolbar=false
+HideChatToolbar=false
+HideusersPanel=false
+HideOtherPanels=false
 
 [Groups]
 TrustNickname=true
